@@ -1,3 +1,12 @@
+2009-04-23  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Fixes: NB#105139 - Fix broken HildonBanner theming.
+
+	* src/hd-system-notifications.c (create_note_infoprint): Fix Broken
+	HildonBanner theming.
+
+	* debian/changelog: Update.
+
 2009-04-22  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Fixes: NB#110238 - Let plugins know about notifications of category
